# pyscenario

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_old.md  ha_integration_spec.md  mypy.ini  pyproject.toml  tox.ini
.github/: FUNDING.yml  ISSUES.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yaml
docs/: Makefile
docs/source/: api_reference.rst  conf.py  index.rst
docs/source/_templates/autosummary/: module.rst
src/pyscenario/: __init__.py  client.py  config_schema.py  const.py  ifsei.py  manager.py
tests/: conftest.py  test_client.py  test_ifsei.py  test_manager.py  test_pyscenario.py
